@startuml
    class TextEditor {
        -mContent: String        
        +setText(text: String)
        +getText(): String
        +save(): TextEditorMemento
        +restore(memento: TextEditorMemento
    }
    class TextEditorMemento {
        -mContent: const String
        +getContent(): String
    }
    
    class History {
        -mMementos: stack<TextEditorMemento>
        +save(editor: TextEditor) :void  
        +restore(editor: TextEditor)  :void
       
    }
    

    TextEditor ..> History : uses
    History "1" o--> "*" TextEditorMemento : stores
    
@enduml
